# wolo

./: .gitignore  Cargo.toml  Kick.toml  README.md  wolo.toml
.github/workflows/: ci.yml  release.yml
lib/: Cargo.toml
lib/examples/: ping.rs
lib/src/: buf.rs  error.rs  lib.rs  pinger.rs
lib/src/icmp/: macros.rs  mod.rs  v4.rs  v6.rs
lib/src/ip/: mod.rs
rpm/: wolo.service  wolo.spec
src/: config.rs  embed.rs  home.rs  main.rs  mokuro.rs  ping_loop.rs  utils.rs  wake_on_lan.rs
static/: home.html  mokuro.html  style.css
wolo/: Cargo.toml
wolo/src/: config.rs  embed.rs  home.rs  host_name_cache.rs  hosts.rs  main.rs  network.rs  ping_loop.rs  showcase.rs  utils.rs  wake_on_lan.rs
wolo/static/: home.md  layout.html  network.html  network.js  style.css
