[package]
name = "wolo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["form"] }
clap = { version = "4.5.53", features = ["derive"] }
macaddr = { version = "1.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
