[package]
name = "wolo"
version = "0.0.4"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2024"
rust-version = "1.91"
description = "A lightweight rust service to do basic network monitoring."
documentation = "https://docs.rs/wolo"
readme = "README.md"
homepage = "https://github.com/udoprog/wolo"
repository = "https://github.com/udoprog/wolo"
license = "MIT OR Apache-2.0"

[dependencies]
lib = { path = "lib" }

anyhow = "1.0.100"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["form"] }
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
macaddr = { version = "1.0.1", features = ["serde"] }
mime = "0.3.17"
mime_guess = "2.0.5"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
minijinja = { version = "2.12.0", features = ["loader"] }
relative-path = "2.0.1"
twox-hash = { version = "2.1.2", features = ["xxhash3_128"] }
uuid = { version = "1.18.1", features = ["serde"] }
rand = "0.9.2"
toml = "0.9.8"
slab = "0.4.11"

[workspace]
resolver = "3"
members = ["lib"]
