[package]
name = "lib"
edition = "2024"
publish = false
rust-version = "1.91"

[dependencies]
libc = "0.2.177"
tokio = { version = "1.48.0", features = ["net"] }
tracing = "0.1.43"

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tracing-subscriber = "0.3.22"
